
  o Minor bugfixes (v3 directory protocol, bugfixes on 0.2.0.x):
    - Delete unverified-consensus when the real consensus is set.
    - Consider retrying a consensus networkstatus fetch immediately
      after one fails: don't wait 60 seconds to notice.
    - When fetching a consensus as a cache, wait until a newer consensus
      should exist before trying to replace the current one.

  o Minor bugfixes (other directory issues):
    - Correct the implementation of "download votes by digest." Bugfix on
      0.2.0.8-alpha.
    - Authorities no longer send back "400 you're unreachable please fix
      it" errors to Tor servers that aren't online all the time. We're
      supposed to tolerate these servers now. Bugfix on 0.1.2.x.

  o Minor bugfixes (controller):
    - Don't reset trusted dir server list when we set a configuration
      option. Patch from Robert Hogan; bugfix on 0.1.2.x.
    - Respond to INT and TERM SIGNAL commands before we execute the
      signal, in case the signal shuts us down. We had a patch in
      0.1.2.1-alpha that tried to do this by queueing the response on
      the connection's buffer before shutting down, but that really
      isn't the same thing at all. Bug located by Matt Edman.

  o Minor bugfixes (misc):
    - Correctly check for bad options to the "PublishServerDescriptor"
      config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
    - Stop leaking memory on failing case of base32_decode, and make
      it accept upper-case letters. Bugfixes on 0.2.0.7-alpha.
    - Don't try to download extrainfo documents when we're trying to
      fetch enough directory info to build a circuit: having enough
      info should get priority. Bugfix on 0.2.0.x.
    - Don't complain that "your server has not managed to confirm that its
      ports are reachable" if we haven't been able to build any circuits
      yet. Bug found by spending four hours without a v3 consensus. Bugfix
      on 0.1.2.x.